--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -411,6 +411,8 @@ allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:17e::c85a;
+allow 2a00:1dc0:caff:17f::4bcd;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:88::b2ec;
@@ -502,7 +504,6 @@ allow 2a05:541:141:2c::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
-allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:15::1;
 allow 2a06:1700:0:15::2;
@@ -728,6 +729,7 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -747,10 +749,6 @@ allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:1fc0:11:0:216:3cff:fe10:721;
-allow 2a10:1fc0:11:0:216:3cff:fe27:a98;
-allow 2a10:1fc0:11:0:216:3cff:fe34:832a;
-allow 2a10:1fc0:11:0:216:3cff:fe57:9ec;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
