--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -155,7 +155,6 @@ deny 154.16.116.61;
 deny 154.213.185.133;
 deny 154.213.185.165;
 deny 154.213.185.183;
-deny 154.213.185.185;
 deny 154.213.185.230;
 deny 154.213.185.254;
 deny 154.26.159.157;
@@ -214,6 +213,8 @@ deny 176.97.114.202;
 deny 178.17.170.144;
 deny 178.17.170.215;
 deny 178.17.170.23;
+deny 178.17.170.53;
+deny 178.17.170.79;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
@@ -628,6 +629,7 @@ deny 192.99.149.111;
 deny 192.99.168.180;
 deny 193.105.134.150;
 deny 193.105.134.155;
+deny 193.142.146.139;
 deny 193.142.147.233;
 deny 193.142.147.69;
 deny 193.182.96.246;
@@ -963,9 +965,6 @@ deny 212.69.167.80;
 deny 212.73.134.204;
 deny 212.95.50.77;
 deny 212.95.52.76;
-deny 213.109.147.172;
-deny 213.109.147.225;
-deny 213.109.147.98;
 deny 213.252.140.118;
 deny 213.95.149.22;
 deny 216.239.90.19;
@@ -1365,6 +1364,8 @@ deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
+deny 2a00:1dc0:caff:17e::c85a;
+deny 2a00:1dc0:caff:17f::4bcd;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:88::b2ec;
@@ -1456,7 +1457,6 @@ deny 2a05:541:141:2c::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
-deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:15::1;
 deny 2a06:1700:0:15::2;
@@ -1682,6 +1682,7 @@ deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1701,10 +1702,6 @@ deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
-deny 2a10:1fc0:11:0:216:3cff:fe10:721;
-deny 2a10:1fc0:11:0:216:3cff:fe27:a98;
-deny 2a10:1fc0:11:0:216:3cff:fe34:832a;
-deny 2a10:1fc0:11:0:216:3cff:fe57:9ec;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1746,6 +1743,7 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
+deny 45.129.84.248;
 deny 45.131.65.34;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1785,7 +1783,6 @@ deny 45.141.215.88;
 deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
-deny 45.143.166.140;
 deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.15.157.177;
@@ -1922,7 +1919,6 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
-deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
 deny 80.241.60.207;
@@ -1938,7 +1934,6 @@ deny 8.218.9.41;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
-deny 82.221.139.190;
 deny 82.68.49.227;
 deny 82.85.247.254;
 deny 83.217.9.73;
