--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -155,12 +155,12 @@ allow 154.16.116.61;
 allow 154.213.185.133;
 allow 154.213.185.165;
 allow 154.213.185.183;
+allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
 allow 154.40.44.183;
 allow 155.138.161.171;
-allow 155.94.192.114;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 161.35.129.51;
@@ -669,8 +669,6 @@ allow 194.26.192.161;
 allow 194.26.192.77;
 allow 194.62.248.21;
 allow 195.160.220.104;
-allow 195.176.3.19;
-allow 195.176.3.20;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.80.151.242;
@@ -737,8 +735,6 @@ allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:4ba0:fff8:120::1;
-allow 2001:620:20d0::19;
-allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
@@ -1457,6 +1453,7 @@ allow 2a05:541:141:2c::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:15::1;
 allow 2a06:1700:0:15::2;
@@ -1934,6 +1931,7 @@ allow 8.218.9.41;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
