--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -128,6 +128,7 @@ allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.146.142;
+allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -1152,10 +1153,12 @@ allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.62;
+allow 82.153.138.119;
 allow 8.218.9.41;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
