--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,6 +119,7 @@ allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
+allow 130.0.233.34;
 allow 130.0.236.83;
 allow 130.193.10.21;
 allow 130.193.15.186;
@@ -154,6 +155,10 @@ allow 151.80.148.159;
 allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.185.133;
+allow 154.213.185.165;
+allow 154.213.185.183;
+allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
@@ -1448,6 +1453,10 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:15::1;
 allow 2a06:1700:0:15::2;
@@ -1472,6 +1481,7 @@ allow 2a0a:3840:8078:26:0:504e:1a7a:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+allow 2a0b:4140:6dfd::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1737,7 +1747,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.249;
+allow 45.129.84.247;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1958,8 +1968,8 @@ allow 89.147.110.154;
 allow 89.147.110.202;
 allow 89.147.110.82;
 allow 89.147.111.124;
-allow 89.147.111.87;
 allow 89.185.85.140;
+allow 89.22.235.169;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
@@ -2009,6 +2019,7 @@ allow 94.131.3.2;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.143.231.53;
+allow 94.158.246.66;
 allow 94.16.112.22;
 allow 94.16.115.121;
 allow 94.16.116.81;
@@ -2016,6 +2027,7 @@ allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.247;
+allow 94.177.106.54;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
