--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -192,7 +192,9 @@ allow 172.104.176.218;
 allow 172.104.182.84;
 allow 172.105.161.162;
 allow 172.232.173.127;
+allow 172.234.120.235;
 allow 172.234.228.174;
+allow 172.236.53.181;
 allow 172.81.131.110;
 allow 172.81.131.111;
 allow 173.0.3.111;
@@ -203,6 +205,7 @@ allow 176.121.81.51;
 allow 176.124.221.200;
 allow 176.126.253.190;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
@@ -284,7 +287,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1070,8 +1072,10 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
+allow 2600:3c09::f03c:95ff:fe8d:3f4a;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0a::f03c:95ff:fe8d:6977;
+allow 2600:3c14::f03c:95ff:fe9d:51bf;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -1367,6 +1371,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1438,8 +1443,6 @@ allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
-allow 2a05:541:112:31::1;
-allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:15::1;
@@ -1707,7 +1710,6 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
-allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
@@ -1731,7 +1733,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.248;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1835,6 +1836,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1925,7 +1927,6 @@ allow 82.221.131.5;
 allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
-allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
